force-app/main/default/objects/PuppetShow__c/PuppetShow__c.object-meta.xml
<CustomObject>
    <description>Primary School shows are managed through this.  Tours are managed as Campaigns.  Note that hospital visit by FLC&apos;s can also be managed through this object, despite the name.</description>
    <label>Puppet Show</label>
    <nameField>
        <displayFormat>PSP-{0000}</displayFormat>
        <label>PuppetShow ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Puppet Shows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>