force-app/main/default/objects/PuppetShow__c/fields/Age_Of_Child__c.field-meta.xml
<CustomField>
    <fullName>Age_Of_Child__c</fullName>
    <formula>IF(
NOT(ISBLANK(Child_Requesting_Show__c)),
Child_Requesting_Show__r.Age__c,
IF(NOT(ISBLANK( Child_s_Age__c )),
Child_s_Age__c ,NULL))</formula>
    <label>Age Of Child</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>