force-app/main/default/objects/PuppetShow__c/fields/Attendees_Living_With_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Living_With_Cancer__c</fullName>
    <description>No of attendees at the show with cancer</description>
    <label>Attendees Living With Cancer</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>