force-app/main/default/objects/PuppetShow__c/fields/Attendees_with_Parent_Living_With_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Attendees_with_Parent_Living_With_Cancer__c</fullName>
    <label>Attendees with Parent Living With Cancer</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>