force-app/main/default/objects/PuppetShow__c/fields/Attendees_with_Sibling_with_cancer__c.field-meta.xml
<CustomField>
    <fullName>Attendees_with_Sibling_with_cancer__c</fullName>
    <label>Attendees with Sibling with cancer</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>