force-app/main/default/objects/PuppetShow__c/fields/Booking_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Booking_Request_Notes__c</fullName>
    <label>Booking Request Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>