force-app/main/default/objects/PuppetShow__c/fields/Certificate_Issued__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Issued</label>
    <type>Checkbox</type>
</CustomField>