force-app/main/default/objects/PuppetShow__c/fields/Child_has_met_puppets__c.field-meta.xml
<CustomField>
    <fullName>Child_has_met_puppets__c</fullName>
    <label>Child has met puppets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>