force-app/main/default/objects/PuppetShow__c/fields/Child_Requesting_Show__c.field-meta.xml
<CustomField>
    <fullName>Child_Requesting_Show__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Requesting Show</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Family Member</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Puppet Show Requests</relationshipLabel>
    <relationshipName>Puppet_Shows_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>