force-app/main/default/objects/PuppetShow__c/fields/Child_s_Age__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Age__c</fullName>
    <label>Child&apos;s Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>