force-app/main/default/objects/PuppetShow__c/fields/Child_s_Gender__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Gender__c</fullName>
    <label>Child&apos;s Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>