force-app/main/default/objects/PuppetShow__c/fields/Child_s_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Last_Name__c</fullName>
    <inlineHelpText>Used for online form submissions</inlineHelpText>
    <label>Child&apos;s Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>