force-app/main/default/objects/PuppetShow__c/fields/child_school__c.field-meta.xml
<CustomField>
    <fullName>child_school__c</fullName>
    <formula>Child_Requesting_Show__r.School__r.Id</formula>
    <label>Child&apos;s School</label>
    <type>Text</type>
</CustomField>