force-app/main/default/objects/PuppetShow__c/fields/Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details__c</fullName>
    <label>School Contact&apos;s Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>