force-app/main/default/objects/PuppetShow__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <label>Cost Centre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1110 - Corporate Partnerships</fullName>
            </value>
            <value>
                <fullName>1120 - Corporate Grant</fullName>
            </value>
            <value>
                <fullName>1130 - Government Grants</fullName>
            </value>
            <value>
                <fullName>1210 - Major Gifts</fullName>
            </value>
            <value>
                <fullName>1220 - Private Trusts</fullName>
            </value>
            <value>
                <fullName>1310 - Supper Club</fullName>
            </value>
            <value>
                <fullName>1320 - Dine at Mine</fullName>
            </value>
            <value>
                <fullName>1330 - Escarpade</fullName>
            </value>
            <value>
                <fullName>1340 - Convoy</fullName>
            </value>
            <value>
                <fullName>1350 - 1000 Kms for Kids</fullName>
            </value>
            <value>
                <fullName>1360 - WesCarpade</fullName>
            </value>
            <value>
                <fullName>1398 - Event - Other</fullName>
            </value>
            <value>
                <fullName>1400 - Donor Relations</fullName>
            </value>
            <value>
                <fullName>1410 - RG Face to Face</fullName>
            </value>
            <value>
                <fullName>1420 - RG Telemarketing</fullName>
            </value>
            <value>
                <fullName>1430 - RG Other Appeal</fullName>
            </value>
            <value>
                <fullName>1440 - RG DM</fullName>
            </value>
            <value>
                <fullName>1460 - Acquisition Christmas Appeal</fullName>
            </value>
            <value>
                <fullName>1470 - Acquisition Tax Appeal</fullName>
            </value>
            <value>
                <fullName>1510 - Renewal Christmas Appeal</fullName>
            </value>
            <value>
                <fullName>1520 - Renewal Tax Appeal</fullName>
            </value>
            <value>
                <fullName>1530 - Renewal Spring Appeal</fullName>
            </value>
            <value>
                <fullName>1540 - Renewal Autumn</fullName>
            </value>
            <value>
                <fullName>1550 - Renewal Newsletter</fullName>
            </value>
            <value>
                <fullName>1610 - Digital Campaign Tight Hairdo / Shout</fullName>
            </value>
            <value>
                <fullName>1620 - Digital Campaign Tax Appeal</fullName>
            </value>
            <value>
                <fullName>1630 - Digital Campaign - Autumn</fullName>
            </value>
            <value>
                <fullName>1640 - Change.Org</fullName>
            </value>
            <value>
                <fullName>1700 - Supporter Services</fullName>
            </value>
            <value>
                <fullName>1801 - Bequests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>