force-app/main/default/objects/PuppetShow__c/fields/Cost_Centre_To_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre_To_Bill_To__c</fullName>
    <label>Cost Centre To Bill To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1010 - Corporate Partnerships</fullName>
            </value>
            <value>
                <fullName>1910 - Community Fundraising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>