force-app/main/default/objects/PuppetShow__c/fields/Date_Booked__c.field-meta.xml
<CustomField>
    <fullName>Date_Booked__c</fullName>
    <inlineHelpText>The date the show was booked, updated through workflow.</inlineHelpText>
    <label>Date Booked</label>
    <type>Date</type>
</CustomField>