force-app/main/default/objects/PuppetShow__c/fields/Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Date__c</fullName>
    <formula>Child_Requesting_Show__r.Account.Diagnosis_Date__c</formula>
    <label>Diagnosis Date</label>
    <type>Date</type>
</CustomField>