force-app/main/default/objects/PuppetShow__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>End time of show (for hospital visits)</description>
    <inlineHelpText>End time of show (for hospital visits)</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>