force-app/main/default/objects/PuppetShow__c/fields/Entered_In_Outlook__c.field-meta.xml
<CustomField>
    <fullName>Entered_In_Outlook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entered In Outlook</label>
    <type>Checkbox</type>
</CustomField>