force-app/main/default/objects/PuppetShow__c/fields/Extra_fundraising_event_info__c.field-meta.xml
<CustomField>
    <fullName>Extra_fundraising_event_info__c</fullName>
    <label>Extra fundraising event info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>