force-app/main/default/objects/PuppetShow__c/fields/Family_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Family_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Contacted</label>
    <type>Checkbox</type>
</CustomField>