force-app/main/default/objects/PuppetShow__c/fields/Family_Have_Informed_School_About_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Family_Have_Informed_School_About_Cancer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Have Informed School About Cancer</label>
    <type>Checkbox</type>
</CustomField>