force-app/main/default/objects/PuppetShow__c/fields/Family_registered_with_CQ__c.field-meta.xml
<CustomField>
    <fullName>Family_registered_with_CQ__c</fullName>
    <label>Family registered with CQ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>