force-app/main/default/objects/PuppetShow__c/fields/Fundraising_Comments__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Comments__c</fullName>
    <inlineHelpText>Place any special information related to fundraising opportunities.  If the school is opting out you can also provide the reason given here.</inlineHelpText>
    <label>Fundraising Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>