force-app/main/default/objects/PuppetShow__c/fields/Fundraising_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fundraising Task Created</label>
    <type>Checkbox</type>
</CustomField>