force-app/main/default/objects/PuppetShow__c/fields/Has_CQ_Family_Attending__c.field-meta.xml
<CustomField>
    <fullName>Has_CQ_Family_Attending__c</fullName>
    <formula>or( No_Of_Attendees__c &gt; 0,  NOT(ISBLANK(Child_Requesting_Show__c  )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has CQ Family Attending</label>
    <type>Checkbox</type>
</CustomField>