force-app/main/default/objects/PuppetShow__c/fields/HasChildImpactedByCancer__c.field-meta.xml
<CustomField>
    <fullName>HasChildImpactedByCancer__c</fullName>
    <formula>if( Attendees_Living_With_Cancer__c + Attendees_with_Parent_Living_With_Cancer__c + Attendees_with_Sibling_with_cancer__c&gt;0, True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HasChildImpactedByCancer</label>
    <type>Checkbox</type>
</CustomField>