force-app/main/default/objects/PuppetShow__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <label>Hours Worked</label>
    <summarizedField>PSP_Performances__c.Hours_Worked__c</summarizedField>
    <summaryForeignKey>PSP_Performances__c.Puppet_Show__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>