force-app/main/default/objects/PuppetShow__c/fields/How_outgoing_is_your_child__c.field-meta.xml
<CustomField>
    <fullName>How_outgoing_is_your_child__c</fullName>
    <label>How outgoing is your child</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>