force-app/main/default/objects/PuppetShow__c/fields/Interested_in_donating_fundraising__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_donating_fundraising__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in donating/fundraising</label>
    <type>Checkbox</type>
</CustomField>