force-app/main/default/objects/PuppetShow__c/fields/Is_the_school_open_to_doing_media__c.field-meta.xml
<CustomField>
    <fullName>Is_the_school_open_to_doing_media__c</fullName>
    <label>Is the school open to doing media?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>