force-app/main/default/objects/PuppetShow__c/fields/Legacy_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy System ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>