force-app/main/default/objects/PuppetShow__c/fields/Main_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Email__c</fullName>
    <formula>School_Main_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Contact Email</label>
    <type>Text</type>
</CustomField>