force-app/main/default/objects/PuppetShow__c/fields/No_Impacted_By_Cancer__c.field-meta.xml
<CustomField>
    <fullName>No_Impacted_By_Cancer__c</fullName>
    <formula>Attendees_Living_With_Cancer__c + Attendees_with_Parent_Living_With_Cancer__c + Attendees_with_Sibling_with_cancer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Impacted By Cancer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>