force-app/main/default/objects/PuppetShow__c/fields/No_Of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Attendees__c</fullName>
    <label>No Of Attendees</label>
    <summaryForeignKey>PSP_Show_Attendee__c.Puppet_Show__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>