force-app/main/default/objects/PuppetShow__c/fields/Number_Of_Shows__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Shows__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number Of Shows</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>