force-app/main/default/objects/PuppetShow__c/fields/Opt_Out_Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Fundraising__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Out - Fundraising</label>
    <type>Checkbox</type>
</CustomField>