force-app/main/default/objects/PuppetShow__c/fields/Parking_access_details__c.field-meta.xml
<CustomField>
    <fullName>Parking_access_details__c</fullName>
    <label>Parking/access details</label>
    <type>TextArea</type>
</CustomField>