force-app/main/default/objects/PuppetShow__c/fields/Puppet_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Puppet_Show_Name__c</fullName>
    <description>Searchable name for the puppet show, similar to Campaign Name</description>
    <inlineHelpText>Searchable name for the puppet show, similar to Campaign Name</inlineHelpText>
    <label>Puppet Show Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>