force-app/main/default/objects/PuppetShow__c/fields/PuppetCampaign__c.field-meta.xml
<CustomField>
    <fullName>PuppetCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to link the Show to a tour if it is done as part of a tour.</inlineHelpText>
    <label>Puppet Tour Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Puppet Shows</relationshipLabel>
    <relationshipName>Puppet_Shows</relationshipName>
    <type>Lookup</type>
</CustomField>