force-app/main/default/objects/PuppetShow__c/fields/RE_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>RE_Event_ID__c</fullName>
    <label>RE Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>