force-app/main/default/objects/PuppetShow__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Puppet Shows (Requestor)</relationshipLabel>
    <relationshipName>Puppet_Shows</relationshipName>
    <type>Lookup</type>
</CustomField>