force-app/main/default/objects/PuppetShow__c/fields/Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email__c</fullName>
    <inlineHelpText>Email address of person requesting show. Used for online form submissions</inlineHelpText>
    <label>Requestor Email</label>
    <type>Email</type>
</CustomField>