force-app/main/default/objects/PuppetShow__c/fields/Requestor_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Requestor_External_ID__c</fullName>
    <formula>Requestor_First_Name__c + Requestor_Last_Name__c + Requestor_Email__c</formula>
    <label>Requestor External ID</label>
    <type>Text</type>
</CustomField>