force-app/main/default/objects/PuppetShow__c/fields/Requestor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_First_Name__c</fullName>
    <inlineHelpText>First namer of person requesting show. Used for online form submissions.</inlineHelpText>
    <label>Requestor First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>