force-app/main/default/objects/PuppetShow__c/fields/Requestor_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Last_Name__c</fullName>
    <inlineHelpText>Name of person requesting puppet show. Used for online form submissions</inlineHelpText>
    <label>Requestor Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>