force-app/main/default/objects/PuppetShow__c/fields/Requestor_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Mobile_Phone__c</fullName>
    <label>Requestor Mobile Phone</label>
    <type>Phone</type>
</CustomField>