force-app/main/default/objects/PuppetShow__c/fields/Requestor_State__c.field-meta.xml
<CustomField>
    <fullName>Requestor_State__c</fullName>
    <description>State the requestor is located in.</description>
    <label>Requestor State</label>
    <length>5</length>
    <type>Text</type>
</CustomField>