force-app/main/default/objects/PuppetShow__c/fields/Requires_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this request require approval?</inlineHelpText>
    <label>Requires Approval</label>
    <type>Checkbox</type>
</CustomField>