force-app/main/default/objects/PuppetShow__c/fields/School_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>School_Main_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>School contacts from venue account field associate with the booking.</description>
    <inlineHelpText>If no contacts appear, you may need to create a new contact and ensure that the primary affiliation field has been completed and/or is correct.</inlineHelpText>
    <label>Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Puppet Shows (School Main Contact)</relationshipLabel>
    <relationshipName>Puppet_Shows1</relationshipName>
    <type>Lookup</type>
</CustomField>