force-app/main/default/objects/PuppetShow__c/fields/School_s_Email__c.field-meta.xml
<CustomField>
    <fullName>School_s_Email__c</fullName>
    <label>School&apos;s Email</label>
    <type>Email</type>
</CustomField>