force-app/main/default/objects/PuppetShow__c/fields/Show_1_Attendence__c.field-meta.xml
<CustomField>
    <fullName>Show_1_Attendence__c</fullName>
    <label>Show 1 Attendence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>