force-app/main/default/objects/PuppetShow__c/fields/Show_1_Time__c.field-meta.xml
<CustomField>
    <fullName>Show_1_Time__c</fullName>
    <label>Show 1 Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>