force-app/main/default/objects/PuppetShow__c/fields/Show_1_Year_Groups__c.field-meta.xml
<CustomField>
    <fullName>Show_1_Year_Groups__c</fullName>
    <label>Show 1 Year Groups</label>
    <length>50</length>
    <type>Text</type>
</CustomField>