force-app/main/default/objects/PuppetShow__c/fields/Show_2_Time__c.field-meta.xml
<CustomField>
    <fullName>Show_2_Time__c</fullName>
    <label>Show 2 Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>