force-app/main/default/objects/PuppetShow__c/fields/Show_2_Year_Group__c.field-meta.xml
<CustomField>
    <fullName>Show_2_Year_Group__c</fullName>
    <label>Show 2 Year Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>