force-app/main/default/objects/PuppetShow__c/fields/Show_3_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Show_3_Attendance__c</fullName>
    <label>Show 3 Attendance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>