force-app/main/default/objects/PuppetShow__c/fields/Show_3_Time__c.field-meta.xml
<CustomField>
    <fullName>Show_3_Time__c</fullName>
    <label>Show 3 Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>