force-app/main/default/objects/PuppetShow__c/fields/Show_3_Year_Group__c.field-meta.xml
<CustomField>
    <fullName>Show_3_Year_Group__c</fullName>
    <label>Show 3 Year Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>