force-app/main/default/objects/PuppetShow__c/fields/Show_Address__c.field-meta.xml
<CustomField>
    <fullName>Show_Address__c</fullName>
    <formula>Venue__r.BillingStreet &amp; &apos; &apos; &amp; Venue__r.BillingCity &amp; &apos; &apos; &amp; Venue__r.BillingState &amp; &apos; &apos; &amp; Venue__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Address</label>
    <type>Text</type>
</CustomField>