force-app/main/default/objects/PuppetShow__c/fields/Show_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Show_Attendance__c</fullName>
    <formula>Show_1_Attendence__c  +Show_2_Attendance__c  +Show_3_Attendance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>