force-app/main/default/objects/PuppetShow__c/fields/Show_Duration__c.field-meta.xml
<CustomField>
    <fullName>Show_Duration__c</fullName>
    <description>Description of show duration (for hospital visits)</description>
    <inlineHelpText>Description of show duration (for hospital visits)</inlineHelpText>
    <label>Show Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>