force-app/main/default/objects/PuppetShow__c/fields/Show_Notes__c.field-meta.xml
<CustomField>
    <fullName>Show_Notes__c</fullName>
    <label>Show Notes</label>
    <type>TextArea</type>
</CustomField>