force-app/main/default/objects/PuppetShow__c/fields/Show_Referral__c.field-meta.xml
<CustomField>
    <fullName>Show_Referral__c</fullName>
    <label>Show Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family Request</fullName>
            </value>
            <value>
                <fullName>School Staff</fullName>
            </value>
            <value>
                <fullName>Hospital Staff</fullName>
            </value>
            <value>
                <fullName>Cancer Hub</fullName>
            </value>
            <value>
                <fullName>Other NFP</fullName>
            </value>
            <value>
                <fullName>Internal CQ referral</fullName>
            </value>
            <value>
                <fullName>Other (see comments)</fullName>
                <isActive>false</isActive>
                <label>Other (see comments)</label>
            </value>
            <value>
                <fullName>Social Worker</fullName>
                <isActive>false</isActive>
                <label>Social Worker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>