force-app/main/default/objects/PuppetShow__c/fields/Show_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Show_Sub_Type__c</fullName>
    <inlineHelpText>Used for fundraising requests</inlineHelpText>
    <label>Show Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Puppet Live Show</fullName>
            </value>
            <value>
                <fullName>Puppet Live Roving Appearance</fullName>
            </value>
            <value>
                <fullName>Puppet Live Q&amp;A</fullName>
            </value>
            <value>
                <fullName>Puppet Video</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>